[Fix] file uploads

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "clsx": "^2.1.1",
     "eld": "^1.0.1",
     "lucide-react": "^0.511.0",
+    "mime-types": "^3.0.1",
     "next": "15.3.2",
     "next-auth": "^5.0.0-beta.28",
     "next-intl": "^4.1.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/mime-types": "^2.1.4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
